// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiscores getHiscores should default type to HiscoreTypes.normal 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should hit the specified hiscore type endpoint 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool_seasonal/index_lite.json",
}
`;

exports[`Hiscores getHiscores should make a GET request 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should make a request with the passed in player name 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.json",
}
`;

exports[`Hiscores getHiscores should properly parse rank and kills for each boss 1`] = `
{
  "abyssalSire": {
    "kills": 378,
    "rank": 73508,
  },
  "alchemicalHydra": {
    "kills": -1,
    "rank": -1,
  },
  "amoxliatl": {
    "kills": -1,
    "rank": -1,
  },
  "araxxor": {
    "kills": -1,
    "rank": -1,
  },
  "artio": {
    "kills": -1,
    "rank": -1,
  },
  "barrowsChests": {
    "kills": 415,
    "rank": 128237,
  },
  "bryophyta": {
    "kills": -1,
    "rank": -1,
  },
  "callisto": {
    "kills": -1,
    "rank": -1,
  },
  "calvarion": {
    "kills": -1,
    "rank": -1,
  },
  "cerberus": {
    "kills": 523,
    "rank": 121198,
  },
  "chambersOfXeric": {
    "kills": 6,
    "rank": 300029,
  },
  "chambersOfXericChallengeMode": {
    "kills": -1,
    "rank": -1,
  },
  "chaosElemental": {
    "kills": 6,
    "rank": 240720,
  },
  "chaosFanatic": {
    "kills": 7,
    "rank": 296391,
  },
  "commanderZilyana": {
    "kills": 57,
    "rank": 167996,
  },
  "corporealBeast": {
    "kills": 93,
    "rank": 78821,
  },
  "corruptedGauntlet": {
    "kills": -1,
    "rank": -1,
  },
  "crazyArchaeologist": {
    "kills": -1,
    "rank": -1,
  },
  "dagannothPrime": {
    "kills": 166,
    "rank": 155337,
  },
  "dagannothRex": {
    "kills": 172,
    "rank": 230055,
  },
  "dagannothSupreme": {
    "kills": 166,
    "rank": 154370,
  },
  "derangedArchaeologist": {
    "kills": -1,
    "rank": -1,
  },
  "dukeSucellus": {
    "kills": 300,
    "rank": 37163,
  },
  "gauntlet": {
    "kills": -1,
    "rank": -1,
  },
  "generalGraardor": {
    "kills": 14,
    "rank": 412346,
  },
  "giantMole": {
    "kills": 674,
    "rank": 56994,
  },
  "grotesqueGuardians": {
    "kills": -1,
    "rank": -1,
  },
  "hespori": {
    "kills": 20,
    "rank": 404379,
  },
  "hueycoatl": {
    "kills": -1,
    "rank": -1,
  },
  "kalphiteQueen": {
    "kills": 34,
    "rank": 202775,
  },
  "kingBlackDragon": {
    "kills": 180,
    "rank": 189257,
  },
  "kraken": {
    "kills": 33,
    "rank": 471230,
  },
  "krilTsutsaroth": {
    "kills": 62,
    "rank": 150875,
  },
  "leviathan": {
    "kills": -1,
    "rank": -1,
  },
  "lunarChests": {
    "kills": -1,
    "rank": -1,
  },
  "mimic": {
    "kills": 3,
    "rank": 75529,
  },
  "nex": {
    "kills": 220,
    "rank": 68692,
  },
  "nightmare": {
    "kills": 11,
    "rank": 85821,
  },
  "obor": {
    "kills": -1,
    "rank": -1,
  },
  "phantomMuspah": {
    "kills": -1,
    "rank": -1,
  },
  "phosanisNightmare": {
    "kills": -1,
    "rank": -1,
  },
  "sarachnis": {
    "kills": -1,
    "rank": -1,
  },
  "scorpia": {
    "kills": -1,
    "rank": -1,
  },
  "scurrius": {
    "kills": -1,
    "rank": -1,
  },
  "skotizo": {
    "kills": 12,
    "rank": 370233,
  },
  "solHeredit": {
    "kills": -1,
    "rank": -1,
  },
  "spindel": {
    "kills": -1,
    "rank": -1,
  },
  "tempoross": {
    "kills": -1,
    "rank": -1,
  },
  "theatreOfBlood": {
    "kills": -1,
    "rank": -1,
  },
  "theatreOfBloodHardMode": {
    "kills": -1,
    "rank": -1,
  },
  "thermonuclearSmokeDevil": {
    "kills": 62,
    "rank": 230856,
  },
  "tombsOfAmascut": {
    "kills": 39,
    "rank": 120096,
  },
  "tombsOfAmascutExpertMode": {
    "kills": 98,
    "rank": 50168,
  },
  "tzKalZuk": {
    "kills": 1,
    "rank": 68669,
  },
  "tzTokJad": {
    "kills": 8,
    "rank": 142966,
  },
  "vardorvis": {
    "kills": 5,
    "rank": 97673,
  },
  "venenatis": {
    "kills": 191,
    "rank": 53801,
  },
  "vetion": {
    "kills": -1,
    "rank": -1,
  },
  "vorkath": {
    "kills": 134,
    "rank": 347601,
  },
  "whisperer": {
    "kills": -1,
    "rank": -1,
  },
  "wintertodt": {
    "kills": 404,
    "rank": 297847,
  },
  "zalcano": {
    "kills": -1,
    "rank": -1,
  },
  "zulrah": {
    "kills": 693,
    "rank": 153119,
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank and score for each minigame 1`] = `
{
  "bountyHunter": {
    "rank": -1,
    "score": -1,
  },
  "bountyHunterLegacy": {
    "rank": 164040,
    "score": 6,
  },
  "bountyHunterRogues": {
    "rank": -1,
    "score": -1,
  },
  "bountyHunterRoguesLegacy": {
    "rank": 109733,
    "score": 6,
  },
  "clueScrollsAll": {
    "rank": 54452,
    "score": 790,
  },
  "clueScrollsBeginner": {
    "rank": 165965,
    "score": 27,
  },
  "clueScrollsEasy": {
    "rank": 99968,
    "score": 65,
  },
  "clueScrollsElite": {
    "rank": 23496,
    "score": 118,
  },
  "clueScrollsHard": {
    "rank": 16282,
    "score": 454,
  },
  "clueScrollsMaster": {
    "rank": 35917,
    "score": 69,
  },
  "clueScrollsMedium": {
    "rank": 236176,
    "score": 57,
  },
  "colosseumGlory": {
    "rank": -1,
    "score": -1,
  },
  "deadmanPoints": {
    "rank": -1,
    "score": -1,
  },
  "leaguePoints": {
    "rank": -1,
    "score": -1,
  },
  "lms": {
    "rank": 110356,
    "score": 737,
  },
  "pvpArena": {
    "rank": -1,
    "score": -1,
  },
  "riftsClosed": {
    "rank": 164911,
    "score": 174,
  },
  "soulWarsZeal": {
    "rank": -1,
    "score": -1,
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank, level, and xp for each skill 1`] = `
{
  "agility": {
    "level": 86,
    "rank": 202532,
    "xp": 3750415,
  },
  "attack": {
    "level": 99,
    "rank": 79458,
    "xp": 21037534,
  },
  "construction": {
    "level": 99,
    "rank": 99655,
    "xp": 13041814,
  },
  "cooking": {
    "level": 99,
    "rank": 77845,
    "xp": 14860431,
  },
  "crafting": {
    "level": 99,
    "rank": 58868,
    "xp": 13963216,
  },
  "defence": {
    "level": 99,
    "rank": 53390,
    "xp": 19951069,
  },
  "farming": {
    "level": 99,
    "rank": 176294,
    "xp": 13560401,
  },
  "firemaking": {
    "level": 99,
    "rank": 67653,
    "xp": 14106174,
  },
  "fishing": {
    "level": 99,
    "rank": 124732,
    "xp": 13041101,
  },
  "fletching": {
    "level": 99,
    "rank": 60226,
    "xp": 13487041,
  },
  "herblore": {
    "level": 99,
    "rank": 40589,
    "xp": 13352479,
  },
  "hitpoints": {
    "level": 99,
    "rank": 116867,
    "xp": 35183018,
  },
  "hunter": {
    "level": 85,
    "rank": 265492,
    "xp": 3447862,
  },
  "magic": {
    "level": 99,
    "rank": 69594,
    "xp": 23912339,
  },
  "mining": {
    "level": 99,
    "rank": 49227,
    "xp": 14051688,
  },
  "overall": {
    "level": 2228,
    "rank": 78286,
    "xp": 350155825,
  },
  "prayer": {
    "level": 99,
    "rank": 27429,
    "xp": 13537460,
  },
  "ranged": {
    "level": 99,
    "rank": 154903,
    "xp": 27502842,
  },
  "runecrafting": {
    "level": 94,
    "rank": 105400,
    "xp": 7957634,
  },
  "slayer": {
    "level": 99,
    "rank": 103978,
    "xp": 14465551,
  },
  "smithing": {
    "level": 89,
    "rank": 196089,
    "xp": 5196110,
  },
  "strength": {
    "level": 99,
    "rank": 75015,
    "xp": 30852600,
  },
  "thieving": {
    "level": 92,
    "rank": 205777,
    "xp": 6660719,
  },
  "woodcutting": {
    "level": 99,
    "rank": 111828,
    "xp": 13236327,
  },
}
`;

exports[`Hiscores getHiscores should return skills, minigames, and bosses from a json response 1`] = `
{
  "bosses": {
    "abyssalSire": {
      "kills": 378,
      "rank": 73508,
    },
    "alchemicalHydra": {
      "kills": -1,
      "rank": -1,
    },
    "amoxliatl": {
      "kills": -1,
      "rank": -1,
    },
    "araxxor": {
      "kills": -1,
      "rank": -1,
    },
    "artio": {
      "kills": -1,
      "rank": -1,
    },
    "barrowsChests": {
      "kills": 415,
      "rank": 128237,
    },
    "bryophyta": {
      "kills": -1,
      "rank": -1,
    },
    "callisto": {
      "kills": -1,
      "rank": -1,
    },
    "calvarion": {
      "kills": -1,
      "rank": -1,
    },
    "cerberus": {
      "kills": 523,
      "rank": 121198,
    },
    "chambersOfXeric": {
      "kills": 6,
      "rank": 300029,
    },
    "chambersOfXericChallengeMode": {
      "kills": -1,
      "rank": -1,
    },
    "chaosElemental": {
      "kills": 6,
      "rank": 240720,
    },
    "chaosFanatic": {
      "kills": 7,
      "rank": 296391,
    },
    "commanderZilyana": {
      "kills": 57,
      "rank": 167996,
    },
    "corporealBeast": {
      "kills": 93,
      "rank": 78821,
    },
    "corruptedGauntlet": {
      "kills": -1,
      "rank": -1,
    },
    "crazyArchaeologist": {
      "kills": -1,
      "rank": -1,
    },
    "dagannothPrime": {
      "kills": 166,
      "rank": 155337,
    },
    "dagannothRex": {
      "kills": 172,
      "rank": 230055,
    },
    "dagannothSupreme": {
      "kills": 166,
      "rank": 154370,
    },
    "derangedArchaeologist": {
      "kills": -1,
      "rank": -1,
    },
    "dukeSucellus": {
      "kills": 300,
      "rank": 37163,
    },
    "gauntlet": {
      "kills": -1,
      "rank": -1,
    },
    "generalGraardor": {
      "kills": 14,
      "rank": 412346,
    },
    "giantMole": {
      "kills": 674,
      "rank": 56994,
    },
    "grotesqueGuardians": {
      "kills": -1,
      "rank": -1,
    },
    "hespori": {
      "kills": 20,
      "rank": 404379,
    },
    "hueycoatl": {
      "kills": -1,
      "rank": -1,
    },
    "kalphiteQueen": {
      "kills": 34,
      "rank": 202775,
    },
    "kingBlackDragon": {
      "kills": 180,
      "rank": 189257,
    },
    "kraken": {
      "kills": 33,
      "rank": 471230,
    },
    "krilTsutsaroth": {
      "kills": 62,
      "rank": 150875,
    },
    "leviathan": {
      "kills": -1,
      "rank": -1,
    },
    "lunarChests": {
      "kills": -1,
      "rank": -1,
    },
    "mimic": {
      "kills": 3,
      "rank": 75529,
    },
    "nex": {
      "kills": 220,
      "rank": 68692,
    },
    "nightmare": {
      "kills": 11,
      "rank": 85821,
    },
    "obor": {
      "kills": -1,
      "rank": -1,
    },
    "phantomMuspah": {
      "kills": -1,
      "rank": -1,
    },
    "phosanisNightmare": {
      "kills": -1,
      "rank": -1,
    },
    "sarachnis": {
      "kills": -1,
      "rank": -1,
    },
    "scorpia": {
      "kills": -1,
      "rank": -1,
    },
    "scurrius": {
      "kills": -1,
      "rank": -1,
    },
    "skotizo": {
      "kills": 12,
      "rank": 370233,
    },
    "solHeredit": {
      "kills": -1,
      "rank": -1,
    },
    "spindel": {
      "kills": -1,
      "rank": -1,
    },
    "tempoross": {
      "kills": -1,
      "rank": -1,
    },
    "theatreOfBlood": {
      "kills": -1,
      "rank": -1,
    },
    "theatreOfBloodHardMode": {
      "kills": -1,
      "rank": -1,
    },
    "thermonuclearSmokeDevil": {
      "kills": 62,
      "rank": 230856,
    },
    "tombsOfAmascut": {
      "kills": 39,
      "rank": 120096,
    },
    "tombsOfAmascutExpertMode": {
      "kills": 98,
      "rank": 50168,
    },
    "tzKalZuk": {
      "kills": 1,
      "rank": 68669,
    },
    "tzTokJad": {
      "kills": 8,
      "rank": 142966,
    },
    "vardorvis": {
      "kills": 5,
      "rank": 97673,
    },
    "venenatis": {
      "kills": 191,
      "rank": 53801,
    },
    "vetion": {
      "kills": -1,
      "rank": -1,
    },
    "vorkath": {
      "kills": 134,
      "rank": 347601,
    },
    "whisperer": {
      "kills": -1,
      "rank": -1,
    },
    "wintertodt": {
      "kills": 404,
      "rank": 297847,
    },
    "zalcano": {
      "kills": -1,
      "rank": -1,
    },
    "zulrah": {
      "kills": 693,
      "rank": 153119,
    },
  },
  "minigames": {
    "bountyHunter": {
      "rank": -1,
      "score": -1,
    },
    "bountyHunterLegacy": {
      "rank": 164040,
      "score": 6,
    },
    "bountyHunterRogues": {
      "rank": -1,
      "score": -1,
    },
    "bountyHunterRoguesLegacy": {
      "rank": 109733,
      "score": 6,
    },
    "clueScrollsAll": {
      "rank": 54452,
      "score": 790,
    },
    "clueScrollsBeginner": {
      "rank": 165965,
      "score": 27,
    },
    "clueScrollsEasy": {
      "rank": 99968,
      "score": 65,
    },
    "clueScrollsElite": {
      "rank": 23496,
      "score": 118,
    },
    "clueScrollsHard": {
      "rank": 16282,
      "score": 454,
    },
    "clueScrollsMaster": {
      "rank": 35917,
      "score": 69,
    },
    "clueScrollsMedium": {
      "rank": 236176,
      "score": 57,
    },
    "colosseumGlory": {
      "rank": -1,
      "score": -1,
    },
    "deadmanPoints": {
      "rank": -1,
      "score": -1,
    },
    "leaguePoints": {
      "rank": -1,
      "score": -1,
    },
    "lms": {
      "rank": 110356,
      "score": 737,
    },
    "pvpArena": {
      "rank": -1,
      "score": -1,
    },
    "riftsClosed": {
      "rank": 164911,
      "score": 174,
    },
    "soulWarsZeal": {
      "rank": -1,
      "score": -1,
    },
  },
  "skills": {
    "agility": {
      "level": 86,
      "rank": 202532,
      "xp": 3750415,
    },
    "attack": {
      "level": 99,
      "rank": 79458,
      "xp": 21037534,
    },
    "construction": {
      "level": 99,
      "rank": 99655,
      "xp": 13041814,
    },
    "cooking": {
      "level": 99,
      "rank": 77845,
      "xp": 14860431,
    },
    "crafting": {
      "level": 99,
      "rank": 58868,
      "xp": 13963216,
    },
    "defence": {
      "level": 99,
      "rank": 53390,
      "xp": 19951069,
    },
    "farming": {
      "level": 99,
      "rank": 176294,
      "xp": 13560401,
    },
    "firemaking": {
      "level": 99,
      "rank": 67653,
      "xp": 14106174,
    },
    "fishing": {
      "level": 99,
      "rank": 124732,
      "xp": 13041101,
    },
    "fletching": {
      "level": 99,
      "rank": 60226,
      "xp": 13487041,
    },
    "herblore": {
      "level": 99,
      "rank": 40589,
      "xp": 13352479,
    },
    "hitpoints": {
      "level": 99,
      "rank": 116867,
      "xp": 35183018,
    },
    "hunter": {
      "level": 85,
      "rank": 265492,
      "xp": 3447862,
    },
    "magic": {
      "level": 99,
      "rank": 69594,
      "xp": 23912339,
    },
    "mining": {
      "level": 99,
      "rank": 49227,
      "xp": 14051688,
    },
    "overall": {
      "level": 2228,
      "rank": 78286,
      "xp": 350155825,
    },
    "prayer": {
      "level": 99,
      "rank": 27429,
      "xp": 13537460,
    },
    "ranged": {
      "level": 99,
      "rank": 154903,
      "xp": 27502842,
    },
    "runecrafting": {
      "level": 94,
      "rank": 105400,
      "xp": 7957634,
    },
    "slayer": {
      "level": 99,
      "rank": 103978,
      "xp": 14465551,
    },
    "smithing": {
      "level": 89,
      "rank": 196089,
      "xp": 5196110,
    },
    "strength": {
      "level": 99,
      "rank": 75015,
      "xp": 30852600,
    },
    "thieving": {
      "level": 92,
      "rank": 205777,
      "xp": 6660719,
    },
    "woodcutting": {
      "level": 99,
      "rank": 111828,
      "xp": 13236327,
    },
  },
}
`;
